[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytsaurus-flyt"
version = "0.1.2"
description = "Launch PyFlink jobs on YTsaurus Vanilla operations"
keywords = ["flink", "pyflink", "ytsaurus", "vanilla-operations", "data-pipeline"]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Danil Sabirov", email = "danil.sabirov.work@gmail.com"},
    {name = "Alexey Akhundov", email = "me@theseems.ru"},
    {name = "Yahor Burakevich", email = "egor.burakevich93@gmail.com"},
    {name = "Vladimir Praded", email = "vovatv2017@gmail.com"},
    {name = "Alexander Smirnov", email = "smiralexan@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "ytsaurus-client>=0.13",
    "click>=7.1,<7.2",
    "PyYAML>=5.4.1,<6; python_version < '3.12'",
    "PyYAML>=6.0.1,<7; python_version >= '3.12'",
    "tornado>=5.1,<7",
]

[project.optional-dependencies]
dev = [
    "pip>=21",
    "pytest>=6.2.5,<7; python_version < '3.12'",
    "pytest>=7.0; python_version >= '3.12'",
    "pytest-cov",
    "ruff>=0.4",
]

[project.scripts]
flyt = "ytsaurus_flyt.__main__:main"

[project.urls]
Homepage = "https://github.com/ytsaurus/ytsaurus-flyt"
Documentation = "https://github.com/ytsaurus/ytsaurus-flyt/tree/main/python"
Repository = "https://github.com/ytsaurus/ytsaurus-flyt"
Issues = "https://github.com/ytsaurus/ytsaurus-flyt/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ytsaurus_flyt*"]

[tool.setuptools.package-data]
ytsaurus_flyt = ["run_scripts/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.uv]
package = true
